--- a/package.json
+++ b/package.json
@@ -52,6 +52,11 @@
   },
   "homepage": "https://github.com/sqlite/sqlite-wasm#readme",
   "devDependencies": {
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.20",
+    "@babel/plugin-transform-class-properties": "^7.22.5",
+    "@babel/plugin-transform-private-methods": "^7.22.5",
+    "@babel/preset-env": "^7.22.20",
     "cheerio": "^1.0.0-rc.12",
     "decompress": "^4.2.1",
     "http-server": "github:vapier/http-server",
